# SparseEnd2End

./: .clang-format  .gitignore  .gitmodules  LICENSE  QUICK-START.md  README.md  requirement.txt
dataset/: __init__.py  nuscenes_dataset.py
dataset/config/: smart_std_bbox3d.py  sparse4d_temporal_r50_1x1_bs1_256x704_mini.py  sparse4d_temporal_r50_1x4_bs22_256x704.py  sparse4d_temporal_r50_1x4_bs22_256x704_amp.py
dataset/dataloader_wrapper/: __init__.py  dataloader_wrapper.py
dataset/pipeline/nuscenes/: __init__.py  nusc_pipeline.py
dataset/sampler/: __init__.py  distributed_sampler.py  group_in_batch_sampler.py
dataset/utils/: _functions.py  collate.py  data_container.py  scatter_gather.py
deploy/: README.md  build_sparse4d_engine.sh  build_sparse4d_engine_polygraphy.sh  export_backbone_onnx.py  export_head_onnx.py
deploy/dfa_plugin/: Makefile  deformableAttentionAggr.cu  deformableAttentionAggrPlugin.cpp  deformableAttentionAggrPlugin.h  export_dfa_onnx.py  trt_core.py  unit_test.py
deploy/dfa_plugin/tools/: 01_setEnv.sh  02_buildCustomDFAEngine.sh  cudasm.sh
deploy/dfa_plugin/unit_test/: deformable_feature_aggregation_infer-consistency-val_pytorch_vs_trt_unit_test.py  dfa.py
deploy/nusc_export_onnx/: export_backbone_onnx.py  export_head_dfa_onnx.py  export_head_onnx.py
deploy/nusc_export_onnx/consistency_check/: backbone_check.py
deploy/tools/: set_env.sh
deploy/unit_test/: img_backbone_consistency_pytorch_vs_tensorrt_unit_test.py  img_backbone_infer-consistency-val_onnxrt_vs_trt_unit_test.sh  img_backbone_infer-consistency-val_pytorch_vs_onnxrt_unit_test.py  img_backbone_infer-consistency-val_pytorch_vs_trt_unit_test.py  sparse4d_head_first_frame_infer-consistency-val_pytorch_vs_trt_unit_test.py  sparse4d_head_second_frame_infer-consistency-val_pytorch_vs_trt_unit_test.py
deploy/utils/: polygraphy_cmdline_save_input_json_generation.py  polygraphy_save_json_parser.py  polygrapy_save_json_parser.py  utils.py
docker/cuda1116_cudnn8_ub2004_torch1300_py38_torchvision014_torchaudio_0130/: Dockerfile
docker/cuda121_cudnn8_ub2004_torch210_py310_torchvision016_torchaudio_210/: Dockerfile
modules/: sparse4d_detector.py
modules/backbone/: __init__.py  resnet.py
modules/cnn/: base_detector.py  base_module.py  module.py  transformer.py
modules/head/: __init__.py  sparse4d_head.py
modules/head/decoder/: __init__.py  decoder.py
modules/head/loss/: sparse4d_losses.py
modules/head/loss/base_loss/: __init__.py  cross_entropy_loss.py  focal_loss.py  gaussian_focal_loss.py  smooth_l1_loss.py
modules/head/loss/base_loss/ops/: __init__.py  focal_loss.py  setup.py
modules/head/loss/base_loss/ops/src/: focal_loss.cpp  focal_loss_cuda.cu
modules/head/loss/base_loss/utils/: __init__.py  utils.py
modules/head/sparse4d_blocks/: core_blocks.py  instance_bank.py  sparse3d_embedding.py
modules/neck/: __init__.py  fpn.py
modules/ops/: __init__.py  deformable_aggregation.py  setup.py
modules/ops/src/: deformable_aggregation.cpp  deformable_aggregation_cuda.cu
onboard/: CMakeLists.txt  README.md  THIRDPARTY-RECIPE.md  ThirdPartyRecipe.md  main.cpp
onboard/assets/: model_cfg.yaml
onboard/common/: CMakeLists.txt  common.h  cuda_wrapper.cu.h  cuda_wrapper.cuh  parameter.h  time.cpp  time.h  utils.h
onboard/common/unit_test/: CMakeLists.txt  README.md  Readme.md  cuda_wrapper_unit_test.cpp
onboard/head/: instance_bank.cpp  instance_bank.h  utils.cpp  utils.h
onboard/head/unit_test/: README.md
onboard/head/unit_test/eigen_third_party_unit_test/: CMakeLists.txt  eigen_third_party_unit_test.cpp
onboard/head/unit_test/instance_bank_unit_test/: instance_bank_unit_test.cpp
onboard/preprocessor/: CMakeLists.txt  img_aug_with_bilinearinterpolation_kernel.cu  img_aug_with_bilinearinterpolation_kernel.h  img_preprocessor.cpp  img_preprocessor.h  parameters_parser.cpp  parameters_parser.h  preprocess.cpp  preprocess.h
onboard/preprocessor/unit_test/: CMakeLists.txt  README.md  parameters_parser_unit_test.cpp  preprocess_unit_test.cpp
onboard/preprocessor/unit_test/img_preprocessor_unit_test/: CMakeLists.txt  img_preprocessor_unit_test.cpp
onboard/preprocessor/unit_test/parameters_parser_unit_test/: CMakeLists.txt  parameters_parser_unit_test.cpp
onboard/tensorrt/: logging.cpp  logging.h  tensorrt.cpp  tensorrt.h
onboard/unit_test/sparse4d_extract_feat_trt_infer_unit_test/: CMakeLists.txt  sparse4d_extract_feat_trt_infer_unit_test.cpp
onboard/unit_test/sparse4d_head_first_frame_trt_infer_unit_test/: CMakeLists.txt  sparse4d_head_first_frame_trt_infer_unit_test.cpp
onboard/unit_test/sparse4d_head_second_frame_trt_infer_unit_test/: sparse4d_head_second_frame_trt_infer_unit_test.cpp
resources/: READM.md
resources/docs/: Onnx Operator Schemas.md
script/: benchmark.py  dist_train.sh  dump_nusc_ann_json.py  nusc_anchor_generator.py  offline_eval.py  test.py  train.py
script/tutorial/: 001.nusc_dataset_visualization.py  001.sparse4d_end2end_io_bin_export.py  002_nusc_dataset_visualization.py  010.sparse4d_end2end_io_bin_export.py  020.genernate_onboard_modelconfig_and_inputbin_file.py
script/unit_test/: 001_nusc_dataset_visualization.py  010_loss_unit_test.py
tool/: __init__.py
tool/hook/: __init__.py  baselog.py  checkpoint.py  evaluation.py  hook.py  iter_timer.py  lr_updater.py  optimizer.py  tensorboard.py  textlog.py
tool/runner/: __init__.py  base_runner.py  build_optimizer.py  build_runner.py  checkpoint.py  fp16_utils.py  iter_based_runner.py  log_buffer.py  priority.py
tool/tester/: test_sdk.py  utils.py
tool/trainer/: train_sdk.py  utils.py
tool/utils/: __init__.py  config.py  data_parallel.py  dist_utils.py  distributed.py  env_collect.py  logger.py  logging.py  save_bin.py
tool/visualization/: utils.py
